--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: organica
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://organica-mysql:3306/organica
+    url: jdbc:mysql://localhost:3306/organica
     username: user
     password: password
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
